--- a/app/views/header/_header.html.erb
+++ b/app/views/header/_header.html.erb
@@ -1,4 +1,10 @@
+<nav class="navbar navbar-fixed-top">
 <header class="group" id="site-header">
+
+
   <%= render "header/logo_search_bar" %>
   <%= render "header/login_logout_banner" %>
+
+
 </header>
+</nav>
