--- a/app/views/header/_login_logout_banner.html.erb
+++ b/app/views/header/_login_logout_banner.html.erb
@@ -6,6 +6,6 @@
     <li><%= link_to "SIGN UP", new_user_registration_path, id: "sign-up-header", method: :get %></li>
     <li><%= link_to "LOG IN", new_user_session_path, id: "log-in-header", method: :get %></li>
   <% end %>
-    <li><%= link_to "POST YOUR KNACK", new_space_url, method: :get, class: "button yellow-orange input-medium", id: "header-button"%></li>
+    <li><%= link_to "POST YOUR KNACK", new_space_url, method: :get, class: "btn btn-primary btn-sm", id: "btn btn-primary btn-sm"%></li>
     </ul>
 </nav>
