--- a/app/views/header/_logo_search_bar.html.erb
+++ b/app/views/header/_logo_search_bar.html.erb
@@ -1,7 +1,7 @@
 <nav class="group" id="logo-banner">
   <ul>
 
-    <li>
+    <li><img src="/assets/NK_Square_Logo.png" height="40" width="40">
       <%= link_to "needknack", root_url, method: :get, id: "site-logo" %>
     </li>
 
