--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,7 +1,7 @@
-<section class="group sidebar left">
+<div class="container-fluid1">
   <%= render "spaces/index/space_search_sidebar" %>
-</section>
+</div>
 
-<section class="group" id="space-list-wrapper">
+<div class="container-results" id="space-list-wrapper">
   <%= render "spaces/index/space_list" %>
-</section>
+</div>
