--- a/app/views/spaces/index/_map.html.erb
+++ b/app/views/spaces/index/_map.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <section class="global-map group">
-  <div id="map-canvas"></div>
+  <div id="map-canvas" style="margin:0px; width: 100%;"></div>
 </section>
 
 <script type="text/javascript">
