--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -4,13 +4,144 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
+  padding-top: 65px;
+  background-color: #f5f5f5;
+}
+
+
+/* Extra markup and styles for table-esque vertical and horizontal centering */
+.site-wrapper {
+  display: table;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+.site-wrapper-inner {
+  display: table-cell;
+  vertical-align: top;
+}
+.cover-container {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* Padding for spacing */
+.inner {
+  padding: 30px;
 }
 
 
 /*
- * Global add-ons
+ * Header
  */
+.masthead-brand {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.masthead-nav > li {
+  display: inline-block;
+}
+.masthead-nav > li + li {
+  margin-left: 20px;
+}
+.masthead-nav > li > a {
+  padding-right: 0;
+  padding-left: 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff; /* IE8 proofing */
+  color: rgba(255,255,255,.75);
+  border-bottom: 2px solid transparent;
+}
+.masthead-nav > li > a:hover,
+.masthead-nav > li > a:focus {
+  background-color: transparent;
+  border-bottom-color: #a9a9a9;
+  border-bottom-color: rgba(255,255,255,.25);
+}
+.masthead-nav > .active > a,
+.masthead-nav > .active > a:hover,
+.masthead-nav > .active > a:focus {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+@media (min-width: 768px) {
+  .masthead-brand {
+    float: left;
+  }
+  .masthead-nav {
+    float: right;
+  }
+}
+
+
+/*
+ * Cover
+ */
+
+.cover {
+  padding: 0 20px;
+}
+.cover .btn-lg {
+  padding: 10px 20px;
+  font-weight: bold;
+}
+
+
+/*
+ * Footer
+ */
+
+.mastfoot {
+  color: #999; /* IE8 proofing */
+  color: rgba(255,255,255,.5);
+}
+
+
+/*
+ * Affix and center
+ */
+
+@media (min-width: 768px) {
+  /* Pull out the header and footer */
+  .masthead {
+    position: fixed;
+    top: 0;
+  }
+  .mastfoot {
+    position: fixed;
+    bottom: 0;
+  }
+  /* Start the vertical centering */
+  .site-wrapper-inner {
+    vertical-align: middle;
+  }
+  /* Handle the widths */
+  .masthead,
+  .mastfoot,
+  .cover-container {
+    width: 100%; /* Must be percentage or pixels for horizontal alignment */
+  }
+}
+
+@media (min-width: 992px) {
+  .masthead,
+  .mastfoot,
+  .cover-container {
+    width: 700px;
+  }
+}
+
+ .navheader{
+  text-decoration: bold;
+  font-size:20px;
+  margin-bottom: 0px ;
+  text-transform: uppercase; ;
+ }
 
 .sub-header {
   padding-bottom: 10px;
@@ -28,6 +159,38 @@ body {
  */
 .navbar-fixed-top {
   border: 0;
+}
+
+.knacktitle{
+  font-family: inherit; 
+  font-size: 18px;
+  text-transform: capitalize;
+}
+
+.knackheader{
+  text-transform: uppercase;
+}
+
+.knackdes{
+  height: 90px;
+  display: inline-table;
+  vertical-align:middle;
+}
+.knackinfo{
+  text-transform: capitalize;
+}
+
+.spandes{
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 14px; /* <-- adjust this */
+}
+
+.img-roundedcustom{
+  border-radius: 0px;
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 /*
@@ -48,22 +211,22 @@ body {
   margin-left: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 568px) {
   .container-results {
-width: 70%;
-padding-left: 50px;
+width: 100%;
+padding-left: 17%;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 792px) {
   .container-results {
-width: 70%;
-padding-left: 50px;
+width: 100%;
+padding-left: 17%;
   }
 }
 @media (min-width: 1200px) {
   .container-results {
-width: 70%;
-padding-left: 50px;
+width: 100%;
+padding-left: 17%;
   }
 
 /* Hide for mobile, show later */
@@ -78,7 +241,7 @@ padding-left: 50px;
     display: block;
     padding: 20px;
     overflow-x: hidden;
-    background-color: #f5f5f5;
+    background-color: #252b31;
     border-right: 1px solid #eee;
   }
 }
@@ -95,7 +258,7 @@ padding-left: 50px;
 /* Sidebar navigation */
 .nav-sidebar {
   margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   margin-left: -20px;
 }
 .nav-sidebar > li > a {
@@ -106,24 +269,66 @@ padding-left: 50px;
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
   color: #fff;
-  background-color: #428bca;
+  background-color: #252b31;
 }
 
+.reservebtn{
+  color: #fff;
+  text-transform: uppercase;
+  background-color: #452F74;
+  border-color: #17063A;
+}
+
+@media (min-width: 568px) {
+.knackbox{
+  width: 47%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+}
+@media (min-width: 792px) {
+.knackbox{
+  width: 47%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+}
+@media (min-width: 1200px) {
+.knackbox{
+  width: 47%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+}
 .customwell{
 min-height: 20px;
-padding: 19px;
+padding: 10px;
 margin-bottom: 40px;
 margin-right:40px;
-background-color: #f5f5f5;
+background-color: #FFFFFF;
 border: 1px solid #e3e3e3;
 border-radius: 0px;
--webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 
 .customwell-sm{
 padding: 9px;
 border-radius: 3px;
+min-height: 20px;
+padding: 10px;
+margin-bottom: 40px;
+margin-right:40px;
+background-color: #FFFFFF;
+border: 1px solid #e3e3e3;
+border-radius: 0px;
 }
 
 .bigdialog{
