--- a/app/assets/stylesheets/grayscale.css
+++ b/app/assets/stylesheets/grayscale.css
@@ -9,7 +9,7 @@ body {
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
-    background-color: #000;
+    background-color: #f5f5f5;
 }
 
 html {
@@ -24,7 +24,7 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    text-transform: none;
+    text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
@@ -64,7 +64,7 @@ a:focus {
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
-    text-transform: none;
+    text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #000;
 }
@@ -112,7 +112,7 @@ a:focus {
 
 @media(min-width:767px) {
     .navbar {
-        padding: 20px 0;
+        padding: 0px 0;
         border-bottom: 0;
         letter-spacing: 1px;
         background: 0 0;
@@ -135,11 +135,11 @@ a:focus {
     display: table;
     width: 100%;
     height: auto;
-    padding: 100px 0;
+    padding: 0 0;
     text-align: center;
     color: #fff;
-    background: url(../img/bg1.jpg) no-repeat bottom center scroll;
-    background-color: #000;
+    background: url(/assets/tweed.jpg) no-repeat bottom center scroll;
+    background-color: #252b31;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -166,7 +166,8 @@ a:focus {
     }
 
     .intro .intro-body .brand-heading {
-        font-size: 70px;
+        font-size: 65px;
+        margin-bottom: 25px;
     }
 
     .intro .intro-body .intro-text {
@@ -295,17 +296,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #ffffff;
-    color: #ffffff;
+    border: 1px solid #219ab3;
+    color: #219ab3;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #ffffff;
+    border: 1px solid #219ab3;
     outline: 0;
-    color: #ffffff;
-    background-color: #ffffff;
+    color: #000;
+    background-color: #219ab3;
 }
 
 ul.banner-social-buttons {
@@ -332,6 +333,8 @@ ul.banner-social-buttons {
 
 footer {
     padding: 50px 0;
+    background-color: #1c2025;
+    color: #FFFFFF;
 }
 
 footer p {
@@ -346,8 +349,7 @@ footer p {
 
 ::selection {
     text-shadow: none;
-    background: #ffffff;
-    background: rgba(255,255,255,.2);
+    background: #252b31;
 }
 
 img::selection {
