--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -3,10 +3,9 @@
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400,900");
 
 #site-logo {
-  color: #1a9ce2 !important;
+  color: #FFFFFF !important;
   display: inline;
   margin: 0 auto;
-  font-family: 'Lato', sans-serif;
   padding: 10px;
   font-size: 15pt;
   font-weight: 300;
@@ -15,11 +14,13 @@
 }
 
 #site-header {
-  background-image: -webkit-linear-gradient(top, rgb(255, 255, 255) 0%, rgb(249, 249, 249) 49%, rgb(242, 242, 242) 51%, rgb(240, 240, 240) 100%);
-  height: 45px;
+  background-color: #1c2125;
+  height: 65px;
   width: 100%;
   min-width: 768px;
-  border-bottom: 1px solid rgb(208, 208, 208);
+  border-bottom: 1px solid #1c2125;
+  padding-top: 10px;
+  padding-left: 10px;
 }
 
 #user-nav {
@@ -91,28 +92,28 @@
 }
 
 #header-button {
-  padding: 7px 10px !important;
-  font-size: 11px !important;
-  border-radius: 4px;
-  color: rgb(60,60,60) !important;
-  background-image: -webkit-linear-gradient(top, rgb(253, 228, 76) 0%, rgb(243, 198, 19) 100%);
+  color: #fff;
+  background-color: #428bca;
+  border-color: #357ebd;
+  border-radius: 3px;
+
 }
 
 #header-search-input {
-  border-radius: 3px;
-  color: rgb(90,90,90);
-  font-size: 13px;
+  border-radius: 0px;
+  color: #17063A;
+  font-size: 12px;
   width: 280px;
 }
 
 #sign-up-header, #log-in-header, #username {
-  color: rgb(132, 132, 132);
-  font-size: 11px;
-  font-weight: bold;
+  color: #FFFFFF;
+  text-transform: capitalize;
+  font-size: inherit;
   padding-right: 10px;
   padding-left:  10px;
 }
 
 #header-user-image {
-  margin-top: 10px;
+  margin-top: 0px;
 }
