--- a/app/assets/stylesheets/space_index_sidebar.css
+++ b/app/assets/stylesheets/space_index_sidebar.css
@@ -41,16 +41,12 @@ h4.sidebar-section-header:first-child {
 
 #space-index-sidebar-filter-button {
   width: 100%;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
   margin-top: 0;
   padding: 10px 0;
 }
 
 .sidebar-full-width {
-  width: 202px;
+  width: 100%;
   border-right: 0;
   border-left: 0;
   border: 0;
@@ -74,8 +70,9 @@ h4.sidebar-section-header:first-child {
 }
 
 .price-range-wrapper {
-  width: 220px;
-  margin: auto !important;
+  width: 100%;
+  margin: 0px;
+  height:64px;
 }
 
 .price-range-wrapper > p {
