--- a/app/views/spaces/show/_booking_sidebar.html.erb
+++ b/app/views/spaces/show/_booking_sidebar.html.erb
@@ -77,7 +77,8 @@
 
     <h4 class="sidebar-section-header" id="top-of-booking-sidebar">The Host</h4>
     <div class="sidebar-section group">
-      <div id="owner-img"><%= link_to image_tag(@space.owner.photo_medium, class: "user-image-medium"), @space.owner, method: :get %></div>
+      <% @user = User.find_by_id(@space.owner.id) %>
+      <div id="owner-img"><%= link_to image_tag(@user.avatar.url(:medium), class: "user-image-medium"), @space.owner, method: :get %></div>
 
       <h3 id="space-show-owner-name"><%="#{@space.owner.first_name} "%><%="#{@space.owner.last_name}"%></h3>
     </div>
