--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,10 +1,12 @@
 <header id="space-show-header">
   <h2 id="space-show-title"> <%= best_in_place @space, :title %></h2>
-<!-- TODO MOVE RATINGS -->
-<!-- TODO ALLOW RATINGS TO ONLY OCCUR WHEN KNACK IS COMPLETE BY NEEDER -->
 Rating:<br>
-<%= rating_for @space, "rating", :star => 5 %>
-
+<% @rate = Rate.find_by_rateable_id(@space.id) %>
+<% if !@rate.nil? %>
+<%= @rate.stars %>/5.0<br>
+<% else %>
+No ratings yet <br>
+<% end %>
   <h3 id="space-show-info">
     <% if signed_in? && current_user.id == @space.owner_id %>   
     <%= link_to 'Edit Knack', edit_space_path(@space) %>
