--- a/app/views/spaces/show/_booking_sidebar.html.erb
+++ b/app/views/spaces/show/_booking_sidebar.html.erb
@@ -41,11 +41,12 @@
         <br>
 
     </div>
-
+<!--
     <h4 class="sidebar-section-header">End Date</h4>
     <div class="sidebar-section group">
         <input type="date" name="booking[end_date]" class="date-input input-small sidebar-full-width" input-small sidebar-half-width>
     </div>
+  -->
     <h4 class="sidebar-section-header">End Time</h4>
     <div class="sidebar-section group">
 
@@ -77,7 +78,8 @@
 
     <h4 class="sidebar-section-header" id="top-of-booking-sidebar">The Host</h4>
     <div class="sidebar-section group">
-      <div id="owner-img"><%= link_to image_tag(@space.owner.photo_medium, class: "user-image-medium"), @space.owner, method: :get %></div>
+      <% @user = User.find_by_id(@space.owner.id) %>
+      <div id="owner-img"><%= link_to image_tag(@user.avatar.url(:medium), class: "user-image-medium"), @space.owner, method: :get %></div>
 
       <h3 id="space-show-owner-name"><%="#{@space.owner.first_name} "%><%="#{@space.owner.last_name}"%></h3>
     </div>
