--- a/app/views/header/_logo_search_bar.html.erb
+++ b/app/views/header/_logo_search_bar.html.erb
@@ -1,14 +1,15 @@
 <nav class="group" id="logo-banner">
-  <ul>
+	<ul>
 
-    <li><img src="/assets/NK_Square_Logo.png" height="40" width="40">
-      <%= link_to "needknack", root_url, method: :get, id: "site-logo" %>
-    </li>
+		<li>
+			<%= link_to image_tag("/assets/NK_Square_Logo.png", :style => "width: 40px; height: 40px;"), root_url %>
+			<%= link_to "needknack", root_url, method: :get, id: "site-logo" %>
+		</li>
 
-    <li>
-      <%= render "header/header_search_bar" %>
+		<li>
+			<%= render "header/header_search_bar" %>
 
-    </li>
+		</li>
 
-  </ul>
+	</ul>
 </nav>
