--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -1,8 +1,7 @@
  
- <h2>
+<h3 class="panel-title">
 	Settings 
- </h2>
-</br>
+ </h3>
 </br>
 
 <%= link_to "Change your password", settings_path %>
