--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,47 +1,47 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+  <div class="row vertical-offset-100">
+    <div class="col-md-4 col-md-offset-4">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Edit User</h3>
+        </div>
+        <div class="panel-body">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
- 
-  <div class="field">
-  <%= f.label :first_name %>
-  <br/>
-  <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
+          <div class="form-group">
+            <%= f.email_field :email, placeholder: "Email", :class => 'form-control', autofocus: true %></div>
 
-  <div class="field">
-  <%= f.label :last_name %>
-  <br/>
-  <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
+          <div class="form-group">
+              <%= f.text_field :first_name, placeholder: "Email", :class => 'form-control' %>
+            </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+          <div class="form-group">
+                <%= f.text_field :last_name, placeholder: "Email", :class => 'form-control' %>
+              </div>
 
-
-  <div class="field">
-  <%= f.label :description %>
-  <br/>
-  <%= f.text_field :description %>
-  </div>
-  <div class="field">
-
-  </div>
-
-  <%= f.file_field :avatar %>
+                <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+                <% end %>
 
 
-  <div><%= f.submit "Update" %></div>
-<% end %>
+          <div class="form-group">
+                  <%= f.text_field :description, placeholder: "Description", :class => 'form-control' %>
+                </div>
 
-<h3>Cancel my account</h3>
+          <div class="form-group">
+                <%= f.file_field :avatar, :class => 'form-control' %>
+</div>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+                <div><%= f.submit "Update", :class => 'btn btn-lg btn-success btn-block' %></div>
+                <% end %>
 
-<%= link_to "Back", :back %>
+                <br/><%= link_to "Go back", :back %>
+
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
