--- a/app/views/devise/registrations/settings.html.erb
+++ b/app/views/devise/registrations/settings.html.erb
@@ -1,29 +1,43 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+  <div class="row vertical-offset-100">
+    <div class="col-md-4 col-md-offset-4">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Change Password</h3>
+        </div>
+        <div class="panel-body">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+          <div class="form-group">
+            <%= f.email_field :email, placeholder: "Email", :class => 'form-control', autofocus: true %></div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div class="form-group">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+            <% end %>
 
-  <div><%= f.label :current_password %><br/>
-   <%= f.password_field :current_password, autocomplete: "off" %></div>
+            <div class="form-group">
+             <%= f.password_field :current_password, placeholder: "Current Password", :class => 'form-control', autocomplete: "off" %></div>
 
-   <div><%= f.label :password %> <i></i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+             <div class="form-group">
+              <%= f.password_field :password, placeholder: "New Password", :class => 'form-control', autocomplete: "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+              <div class="form-group">
+                <%= f.password_field :password_confirmation, placeholder: "Password Confirmation", :class => 'form-control', autocomplete: "off" %></div>
 
 
-  <div><%= f.submit "Update" %></div>
-<% end %>
+                <div><%= f.submit "Update", :class => 'btn btn-lg btn-success btn-block' %></div>
+                <% end %>
 
-<h3>Cancel my account</h3>
+                <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+                <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => 'btn btn-danger btn-mini' %></p>
 
-<%= link_to "Back", :back %>
+                <%= link_to "Go back", :back %>
+
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
