--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>neednack</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+
   <%= csrf_meta_tags %>
   <%= yield :head %>
 </head>
@@ -17,6 +18,12 @@
       <%= render "header/flash_notices" %>
     </div>
   <% end %>
+
+  <!--Displays Log In errors-->
+  <%- flash.each do |name, msg| -%>
+    <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+  <%- end -%>  
+  
 
   <% unless params[:controller] == "root" %>
 
