--- a/app/views/users/show/_user_box.html.erb
+++ b/app/views/users/show/_user_box.html.erb
@@ -91,7 +91,7 @@
                         </div>
                         <% if @spaces.empty? %>
                         <br>
-                        No knacks availiable.
+                        No knacks available.
                         <br><br>
                         <% else %>
 
